# panager

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  pyproject.toml  pytest.ini
.agent/workflows/: feature-development.md  git-workflow.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  docker-build.yml
alembic/: env.py
alembic/versions/: 4422171a6ddb_initial_tables.py
app/: main.py
app/core/: config.py  exceptions.py  middleware.py  security.py  slack.py
app/db/: models.py  session.py
app/services/: calendar_service.py  slack_service.py  user_service.py
app/templates/: success.html
docs/: DEPLOYMENT.md  OPERATIONS.md  PROJECT_CONTEXT.md  SRS_autonomous_panager.md
docs/designs/: DO_001_architecture_and_schema.md  DO_001_interface_strategy.md  DO_002_cicd_strategy.md  DO_003_persistence_strategy.md  DO_004_external_integration.md  DO_006_interaction_design.md
docs/plans/: PLAN_001_mvp_implementation.md  PLAN_001_proactive_ai_assistant.md  PLAN_001_project_foundation.md  PLAN_002_cicd_pipeline.md  PLAN_002_core_domain.md  PLAN_002_deployment.md  PLAN_003_git_workflow_improvement.md  PLAN_003_infra_persistence.md  PLAN_004_external_adapters.md  PLAN_004_tool_plugin_expansion.md  PLAN_005_application_layer.md  PLAN_005_legacy_cleanup.md  PLAN_006_autonomous_core.md  PLAN_006_presentation_layer.md  PLAN_007_memory_system.md  PLAN_008_multi_user_system.md  PLAN_P-001_proactive_ai_assistant.md  PLAN_P-002_deployment.md  PLAN_P-003_git_workflow_improvement.md  PLAN_P-004_tool_plugin_expansion.md  PLAN_P-005_legacy_cleanup.md  PLAN_P-006_autonomous_core.md  PLAN_P-007_memory_system.md  PLAN_P-008_multi_user_system.md  PLAN_autonomous_core.md  PLAN_calendar_integration.md  PLAN_deployment.md  PLAN_git_workflow_improvement.md  PLAN_legacy_cleanup.md  PLAN_master.md  PLAN_memory_system.md  PLAN_multi_user_system.md  PLAN_proactive_ai_assistant.md  PLAN_tool_plugin_expansion.md
docs/requirements/: SRS_001_mvp_setup.md
docs/specs/: SPEC_000_cicd_workflow.md  SPEC_001_system_design.md
docs/templates/: SKILL.md  SRS_template.md  TEMPLATE_design_options.md  plan-template.md
migrations/: env.py
migrations/versions/: fb416a1e31c7_initial_schema.py
scripts/: deploy.sh
src/: main.py  worker.py
src/config/: settings.py
src/infrastructure/: container.py  db.py  schema.py
tests/: conftest.py
tests/e2e/: test_full_flow.py
(+144 files in other folders)
