[tool.poetry]
name = "proactive-manager"
version = "0.1.0"
description = "Proactive Manager API"
authors = ["Admin <admin@example.com>"]
packages = [{include = "app"}]


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
# asyncpg = "^0.29.0"
slack-bolt = "^1.18.0"
google-auth-oauthlib = "^1.2.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.0"
pydantic-settings = "^2.12.0"
asyncpg = "^0.31.0"
alembic = "^1.17.2"
cryptography = "^46.0.3"
google-api-python-client = "^2.187.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"
ruff = "^0.1.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^7.0.0"
pytest-env = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


